better db healthcheck

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,14 @@ services:
     image: postgres:13.2
     volumes:
       - db-data:/var/lib/postgresql/data
+    restart: unless-stopped
     environment:
       POSTGRES_DB: ${DB_NAME:-flexo}
       POSTGRES_USER: ${DB_USER:-flexo}
       POSTGRES_PASSWORD: ${DB_PASS}
       PGDATA: /var/lib/postgresql/data/pgdata
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U flexo"] # TODO get user fomr $POSTGRES_USER
+      test: ["CMD-SHELL", "pg_isready -U $DB_USER"]
       interval: 5s
       timeout: 5s
       retries: 5
