--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       DBUSER: ${FLEXO_DB_USER:-flexo}
       DBPASS: ${FLEXO_DB_PASS:-flexo}
       DBNAME: ${FLEXO_DB_NAME:-flexo}
+      DBSSL: ${FLEXO_DB_SSL:-false}
 
       GIN_MODE: ${FLEXO_GIN_MODE:-release}
     depends_on:
