using secret in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       DBPASS: ${FLEXO_DB_PASS:-flexo}
       DBNAME: ${FLEXO_DB_NAME:-flexo}
       DBSSL: ${FLEXO_DB_SSL:-disable}
+      SECRET: ${SECRET:-shared_secret}
 
       GIN_MODE: ${FLEXO_GIN_MODE:-release}
     depends_on:
