--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -14,17 +14,25 @@ jobs:
       - name: Get the version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      ######################################
+      # Login to GitHub Container registry #
+      ######################################
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
-          username: ${{ github.repository_owner }}
+          username: ${{ secrets.GCR_USERNAME }}
           password: ${{ secrets.GH_PAT }}
-      - name: Build and Push Docker Image
+          registry: ghcr.io
+
+      ###########################################
+      # Build and Push containers to registries #
+      ###########################################
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          push: true # Will only build if this is not here
+          context: .
+          file: ./Dockerfile
+          push: true
           tags: |
-            docker.pkg.github.com/seccdc/flexo/flexo:${{ steps.get_version.outputs.VERSION }}
-            docker.pkg.github.com/seccdc/flexo/flexo:latest
-
+            ghcr.io/seccdc/flexo:latest
+            ghcr.io/seccdc/flexo:${{ steps.get_version.outputs.VERSION }}
